duplicated file in get feature